課題提出後の修正

--- a/geolocation.html
+++ b/geolocation.html
@@ -41,14 +41,14 @@
     </select>
   </header>
   <main>
+    <div id="weather">現在地の天気</div>
     <div id="myMap"></div>
   </main>
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- BingMapsAPI -->
-  <script
-    src="https://www.bing.com/api/maps/mapcontrol?mkt=ja-jp&key=Ao2t_jNOuMjEFtAaN2Yq8WqETO-3NaF2EhXNmp7BfZhD_xjpQLOjpl6fECPUk_2O &callback=GetMap"></script>
+ 
   <!-- axios -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
