--- a/geolocation.html
+++ b/geolocation.html
@@ -48,7 +48,7 @@
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- BingMapsAPI -->
- 
+ <!-- ここにキーを入れる -->
   <!-- axios -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
